refactor toolbox